--- a/lib/i18n/en_US.json
+++ b/lib/i18n/en_US.json
@@ -1,3 +1,8 @@
 {
-  "welcome-text": "This text is in english"
+  "welcome-text": "This text is in english",
+  "todo": "Todo",
+  "in-progress": "In progress",
+  "done": "Done",
+  "add": "Add item",
+  "save": "Save"
 }
